# CGDI_Project

./: #scriptClassification.sh#  .gitignore  CGDI_Project  CGDI_Project.cbp  CMakeCache.txt  CMakeLists.txt  Makefile  Makefile2  Makefile3  README.md  TODO  classes.csv  cmake_install.cmake  diffs.csv  ideas.txt  l1_k1_7f  l1_k1_8f  l1_k3_7f  l1_k3_8f  l2_k1_7f  l2_k1_8f  l2_k3_7f  l2_k3_8f  plot.py  scriptClassification.sh
src/: DSS.cpp  DSS.hpp  Histogramme.cpp  Histogramme.hpp  Image.cpp  Image.hpp  ImageClass.cpp  ImageClass.h  KNearestNeighbours.cpp  KNearestNeighbours.h  Pixel.cpp  Pixel.hpp  Util.cpp  Util.hpp  main.cpp
